Exercise 2.6 has been finished

--- a/my_notes/part-1/ex-1.13/example-backend/Dockerfile
+++ b/my_notes/part-1/ex-1.13/example-backend/Dockerfile
@@ -17,6 +17,11 @@ ENV PATH=$PATH:/usr/local/go/bin
 ENV REQUEST_ORIGIN=http://localhost:5000
 ENV REDIS_HOST=redis
 
+#ENV POSTGRES_HOST=5432 
+#ENV POSTGRES_USER=postgres
+#ENV POSTGRES_PASSWORD=postgres
+#ENV POSTGRES_DATABASE=postgres
+
 # just for docs
 EXPOSE 8080
 
