--- a/my_notes/part-2/ex-2.9/docker-compose.yml
+++ b/my_notes/part-2/ex-2.9/docker-compose.yml
@@ -20,12 +20,14 @@ services:
       - ./database:/var/lib/postgresql/data
 
   frontend:
-    image: "example-frontend"
+    #image: "example-frontend"
     ports:
       - 5000:5000
+    build:
+      context: ../../part-1/ex-1.12/example-frontend/
+      dockerfile: frontend.dockerfile
 
   backend:
-    image: "example-backend"
     ports:
       - 8080:8080
     environment:
@@ -33,6 +35,9 @@ services:
       - POSTGRES_HOST=backend-db  # Specify the correct hostname or use the container name
       - POSTGRES_USER=postgres
       - POSTGRES_DATABASE=postgres
+    build:
+      context: ../../part-1/ex-1.13/example-backend/
+      dockerfile: backend.dockerfile
     depends_on:
       - db
 
