--- a/my_notes/part-2/ex-2.9/docker-compose.yml
+++ b/my_notes/part-2/ex-2.9/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     image: example-frontend:v2
     ports:
       - 5000:5000
+    depends_on:
+      - backend
 
   backend:
     image: example-backend:v2
