--- a/my_notes/part-1/ex-1.6_and-earlier/Dockerfile2
+++ b/my_notes/part-1/ex-1.6_and-earlier/Dockerfile2
@@ -7,6 +7,8 @@ WORKDIR /usr/src/app
 # Copy the hello.sh file from this location to /usr/src/app/ creating /usr/src/app/hello.sh.
 COPY hello.sh .
 
+# change permissions
+RUN chmod +x hello.sh
 # Execute a command with `/bin/sh -c` prefix.
 RUN touch additional.txt
 
