--- a/answers/ex-2.1/docker-compose.yml
+++ b/answers/ex-2.1/docker-compose.yml
@@ -1,8 +1,7 @@
-version: "3.8"
-
+version: '3.8'
 services:
   simple-web-service:
     image: "devopsdockeruh/simple-web-service:ubuntu"
     volumes:
-      - ./logs/text.log:/usr/src/app/text.log
-    container_name: sw-service
+      - ./log/text.log:/usr/src/app/text.log
+    container_name: sw-serv
