--- a/answers/ex-1.13/Dockerfile
+++ b/answers/ex-1.13/Dockerfile
@@ -4,6 +4,7 @@ COPY . .
 RUN go build
 ENV PATH=$PATH:/usr/local/go/bin
 ENV REQUEST_ORIGIN=http://192.168.100.8:5000
+ENV REDIS_HOST=redis_se
 RUN go test ./...
 EXPOSE 8080
 ENTRYPOINT ./server
