--- a/answers/ex-2.5 copy/scaling-exercise/docker-compose.yml
+++ b/answers/ex-2.5 copy/scaling-exercise/docker-compose.yml
@@ -1,18 +1,14 @@
-version: '3.8'
+version: '3.2'
 services:
   calculator:
       image: devopsdockeruh/scaling-exercise-calculator
       ports:
         - 3000:3000
       container_name: calculator
-
   compute:
       image: devopsdockeruh/scaling-exercise-compute
       environment:
-        - VIRTUAL_HOST=compute.colasloth.com
-      ports:
-        - 13011
-
+        - VIRTUAL_HOST=compute.localtest.me
   load-balancer:
       build: ./load-balancer
       image: load-balancer
