--- a/answers/ex-2.8/nginx/nginx.conf
+++ b/answers/ex-2.8/nginx/nginx.conf
@@ -1,19 +1,43 @@
-events { worker_connections 1024; }
+events { 
+  worker_connections 1024; 
+}
 
 http {
-  server {
+  server {  
     listen 80;
-    server_name  localhost;
+    server_name localhost;
 
     location / {
-      proxy_pass http://frontend:5000/;
+      proxy_pass http://frontend-uh:5000;
     }
 
     # configure here where requests to http://localhost/api/...
     # are forwarded
-    location /api/ {
+    location /api {
       proxy_set_header Host $host;
       proxy_pass http://localhost:8080/api/;
+      # proxy_pass http://192.168.100.8:8080/api/;
+      # proxy_pass http://localhost:8080/api/;
     }
   }
 }
+
+# events { 
+#   worker_connections 1024; 
+# }
+
+# http {
+
+#     server {
+#         listen 80;
+
+#         location / {
+#           proxy_pass http://frontend-uh:5000;
+#         }
+
+#         location /api {
+#           proxy_pass http://192.168.100.8:8080/api/;
+#           # proxy_pass http://localhost:8080/api/;
+#         }
+#     }
+# }
