--- a/answers/ex-1.12/example-frontend/Dockerfile
+++ b/answers/ex-1.12/example-frontend/Dockerfile
@@ -2,10 +2,12 @@ FROM node:16.20.2-bullseye-slim
 RUN apt update && apt upgrade -y
 WORKDIR /app
 COPY package.json .
-ENV REACT_APP_BACKEND_URL=http://192.168.100.8:8080/
 RUN npm install
 COPY . . 
+# ENV REACT_APP_BACKEND_URL $REACT_APP_BACKEND_URL 
+ENV REACT_APP_BACKEND_URL http://localhost/api
 RUN npm run build
 RUN npm install -g serve
 EXPOSE 5000
-CMD ["serve", "-s" ,"-l", "5000", "build"]  
+
+CMD ["serve", "-s" ,"-l", "5000", "build"]
