--- a/answers/ex-2.10/docker-compose.yml
+++ b/answers/ex-2.10/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.8'
 
 services:
+      
+  nginx:
+    image: nginx
+    ports: 
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend-uh
 
   db:
     image: postgres
@@ -16,15 +25,19 @@ services:
   frontend-uh:
     build:
       context: ../ex-1.12/example-frontend
-    ports: 
-      - 5000:5000
+    # ports: 
+      # - 5000:5000 
     container_name: frontend-uh
+    depends_on:
+      - backend-uh
+    environment:
+      - REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
 
   backend-uh:
     build:
       context: ../ex-1.13/example-backend
-    ports: 
-      - 8080:8080
+    # ports: 
+      # - 8080:8080
     environment:
       - REQUEST_ORIGIN=${REQUEST_ORIGIN}
       - REDIS_HOST=${REDIS_HOST}
