--- a/answers/ex-2.6/docker-compose.yml
+++ b/answers/ex-2.6/docker-compose.yml
@@ -1,35 +1,37 @@
-  version: '3.8'
+version: '3.8'
 
-  services:
+services:
 
-    db:
-      image: postgres
-      restart: unless-stopped
-      container_name: backend-db
-      environment:
-        POSTGRES_PASSWORD: pg
+  db:
+    image: postgres
+    restart: unless-stopped
+    container_name: backend-db
+    environment:
+      POSTGRES_PASSWORD: pg
 
-    frontend-uh:
-      image: vidalme/frontend-uh
-      ports: 
-        - 5000:5000
-      container_name: frontend-uh-c
+  frontend-uh:
+    build:
+      context: ../ex-1.12/example-frontend
+    ports: 
+      - 5000:5000
+    container_name: frontend-uh
 
-    backend-uh:
-      image: vidalme/backend-uh
-      ports:
-        - 8080:8080
-      container_name: backend-uh-c
-      environment:
-        - POSTGRES_PASSWORD=pg
-        - POSTGRES_HOST=db 
-        # - POSTGRES_USER=postgres
-        # - POSTGRES_DATABASE=postgres
-      depends_on:
-        - db
+  backend-uh:
+    build:
+      context: ../ex-1.13/example-backend
+    ports: 
+      - 8080:8080
+    environment:
+      - REQUEST_ORIGIN=${REQUEST_ORIGIN}
+      - REDIS_HOST=${REDIS_HOST}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}  
+    container_name: backend-uh
+    depends_on: 
+      - db
 
-    redis_se:
-      image: redis:7.2.4
-      container_name: redisco
-      volumes:
-        - ./data:/data
+  redis:
+    image: redis:7.2.4
+    container_name: redis
+    volumes:
+      - ./data:/data        
