--- a/answers/ex-2.8/docker-compose.yml
+++ b/answers/ex-2.8/docker-compose.yml
@@ -1,45 +1,52 @@
-  version: '3.8'
+version: '3.8'
 
-  services:
+services:
       
-    nginx:
-      image: nginx
-      ports: 
-        - 80:80
-      volumes:
-        - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  nginx:
+    image: nginx
+    ports: 
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend-uh
 
-    db:
-      image: postgres
-      restart: unless-stopped
-      environment:
-        POSTGRES_PASSWORD: pg
-      
-      volumes:
-        - type: bind
-          source: ./database
-          target: /var/lib/postgresql/data
+  db:
+    image: postgres
+    restart: unless-stopped
+    container_name: backend-db
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - type: bind
+        source: ./database
+        target: /var/lib/postgresql/data
 
-    frontend-uh:
-      image: vidalme/frontend-uh
-      ports: 
-        - 5000:5000
-      container_name: frontend-uh
+  frontend-uh:
+    build:
+      context: ../ex-1.12/example-frontend
+    ports: 
+      - 5000:5000 
+    container_name: frontend-uh
+    depends_on:
+      - backend-uh
 
-    backend-uh:
-      image: vidalme/backend-uh
-      ports:
-        - 8080:8080
-      container_name: backend-uh
-      environment:
-        - POSTGRES_PASSWORD=pg
-        - POSTGRES_HOST=db 
-        # - POSTGRES_USER=postgres
-        # - POSTGRES_DATABASE=postgres
-      depends_on:
-        - db
+  backend-uh:
+    build:
+      context: ../ex-1.13/example-backend
+    ports: 
+      - 8080:8080
+    environment:
+      - REQUEST_ORIGIN=${REQUEST_ORIGIN}
+      - REDIS_HOST=${REDIS_HOST}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}  
+    container_name: backend-uh
+    depends_on: 
+      - db
 
-    redis_se:
-      image: redis:7.2.4
-      volumes:
-        - ./data:/data
+  redis:
+    image: redis:7.2.4
+    container_name: redis
+    volumes:
+      - ./data:/data 
