--- a/answers/ex-2.9/docker-compose.yml
+++ b/answers/ex-2.9/docker-compose.yml
@@ -1,42 +1,52 @@
-version: "3.8"
+version: '3.8'
 
 services:
-
+      
   nginx:
-    image: nginx:latest
+    image: nginx
+    ports: 
+      - 80:80
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - 80:80
-    container_name: nginx-rp
+    depends_on:
+      - frontend-uh
 
   db:
     image: postgres
     restart: unless-stopped
-    environment:
-      - POSTGRES_PASSWORD=example
     container_name: backend-db
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
-      - ./database:/var/lib/postgresql/data
+      - type: bind
+        source: ./database
+        target: /var/lib/postgresql/data
 
-  frontend:
-    image: example-frontend:v2
-    ports:
-      - 5000:5000
+  frontend-uh:
+    build:
+      context: ../ex-1.12/example-frontend
+    ports: 
+      - 5000:5000 
+    container_name: frontend-uh
     depends_on:
-      - backend
+      - backend-uh
 
-  backend:
-    image: example-backend:v2
-    ports:
+  backend-uh:
+    build:
+      context: ../ex-1.13/example-backend
+    ports: 
       - 8080:8080
     environment:
-      - POSTGRES_PASSWORD=example
-      - POSTGRES_HOST=backend-db  # Specify the correct hostname or use the container name
-      - POSTGRES_USER=postgres
-      - POSTGRES_DATABASE=postgres
-    depends_on:
+      - REQUEST_ORIGIN=${REQUEST_ORIGIN}
+      - REDIS_HOST=${REDIS_HOST}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_HOST}  
+    container_name: backend-uh
+    depends_on: 
       - db
 
   redis:
-    image: "redis"
+    image: redis:7.2.4
+    container_name: redis
+    volumes:
+      - ./data:/data 
