--- a/answers/ex-2.9/nginx/nginx.conf
+++ b/answers/ex-2.9/nginx/nginx.conf
@@ -3,17 +3,16 @@ events { worker_connections 1024; }
 http {
   server {
     listen 80;
-    server_name  localhost;
 
     location / {
-      proxy_pass http://frontend:5000/;
+      proxy_pass http://frontend-uh:5000/;
     }
 
     # configure here where requests to http://localhost/api/...
     # are forwarded
     location /api/ {
       proxy_set_header Host $host;
-      proxy_pass http://localhost:8080/api/;
+      proxy_pass http://backend-uh:8080/;
     }
   }
 }
